style: :lipstick: fixed new colors key naming - fixed repo card visibility label not being visible enough - added some more colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,14 @@
 @layer base {
   :root {
     --white: 210 0% 98%;
-    --black:0 0% 7%;
+    --black: 0 0% 7%;
     --background: 210 0% 95%;
-    --backgroundElevation1: 210 0% 98%;
-    --backgroundElevation2: 210 0% 98%;
-    --backgroundElevation3: 210 0% 98%;
-    --backgroundElevation4: 210 0% 98%;
+    --background-elevation-1: 210 0% 98%;
+    --background-elevation-2: 210 0% 88%;
+    --background-elevation-3: 210 0% 78%;
+    --background-elevation-4: 210 0% 68%;
+    --background-elevation-5: 210 0% 58%;
+    --background-elevation-6: 210 0% 48%;
     --foreground: 0 0% 7%;
     --card: 210 0% 98%;
     --card-foreground: 0 0% 7%;
@@ -43,12 +45,14 @@
 
   .dark {
     --white: 210 0% 98%;
-    --black:0 0% 7%;
+    --black: 0 0% 7%;
     --background: 0 0% 7%;
-    --backgroundElevation1: 0 0% 12%;
-    --backgroundElevation2: 0 0% 17%;
-    --backgroundElevation3: 0 0% 22%;
-    --backgroundElevation4: 0 0% 27%;
+    --background-elevation-1: 0 0% 12%;
+    --background-elevation-2: 0 0% 22%;
+    --background-elevation-3: 0 0% 32%;
+    --background-elevation-4: 0 0% 42%;
+    --background-elevation-5: 0 0% 52%;
+    --background-elevation-6: 0 0% 65%;
     --foreground: 210 0% 98%;
     --card: 0 0% 12%;
     --card-foreground: 210 0% 98%;
@@ -56,7 +60,7 @@
     --popover-foreground: 210 0% 98%;
     --primary: 217 91% 60%;
     --primary-foreground: 210 0% 98%;
-    --secondary: 0 0% 17%;
+    --secondary: 0 0% 22%;
     --secondary-foreground: 210 0% 98%;
     --muted: 0 0% 12%;
     --muted-foreground: 0 0% 27%;
